--- a/VERSION EDM(TattoCompany)/CapaNegocio/CapaNegocio.csproj
+++ b/VERSION EDM(TattoCompany)/CapaNegocio/CapaNegocio.csproj
@@ -51,8 +51,8 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
-    <Compile Include="VentaContext.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="VentasController.cs" />
   </ItemGroup>
   <ItemGroup>
     <ProjectReference Include="..\CapaDatos\CapaDatos.csproj">
