--- a/VERSION EDM(TattoCompany)/CapaNegocio/CapaNegocio.csproj
+++ b/VERSION EDM(TattoCompany)/CapaNegocio/CapaNegocio.csproj
@@ -52,6 +52,7 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="VentasController.cs" />
   </ItemGroup>
   <ItemGroup>
     <ProjectReference Include="..\CapaDatos\CapaDatos.csproj">
